--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           <span class="font-weight-normal" style="color: black;">Abhilasha, Alfiya, Chandan & Hasnain</span>
          </p>
          <h5 class="display-5">About</h5>
-         <p>I'm currently a computer science engineering undergraduate. I always intend to learn something new 
-           and hone my existing skills. There are much more intresting things to come, so
-           subscribe to my newsletter to stay connected. <br><br>
+         <p>We are computer science engineering undergraduates. We always intend to learn something new 
+           and hone our existing skills. There are much more intresting things to come, so
+           subscribe to our newsletter to stay connected. <br><br>
            <form action="/subscribe" method="POST">
             <button class="btn btn-outline-primary btn-sm" type="submit">Subscribe</button>
           </form>
@@ -59,7 +59,7 @@
             <img class="github" src="images/github.png" alt="">
           </a>
          </p>
-         <p>&copy; Atharv Inc</p>
+         <p>&copy; AZ Inc</p>
       </div>
      </div>
 
