--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      <div class="container-fluid footer row">
       <div class="col-6">
         <p class="display-5 created-by font-weight-bold" style="color:#047845;">Created by :
-          <span class="font-weight-normal" style="color: black;">Abhilasha, Alfiya, Chandan & Hasnain</span>
+          <span class="font-weight-normal" style="color: black;">Abhilasha, Alfiya & Chandan </span>
          </p>
          <h5 class="display-5">About</h5>
          <p>We are computer science engineering undergraduates. We always intend to learn something new 
