--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+    <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +36,7 @@
      <div class="container-fluid footer row">
       <div class="col-6">
         <p class="display-5 created-by font-weight-bold" style="color:#047845;">Created by :
-          <span class="font-weight-normal" style="color: black;">Abhilasha, Alfiya & Chandan </span>
+          <span class="font-weight-normal" style="color: black;">Abhilasha, Alfiya, Atul, Chandan & Rehan </span>
          </p>
          <h5 class="display-5">About</h5>
          <p>We are computer science engineering undergraduates. We always intend to learn something new 
