--- a/signup.html
+++ b/signup.html
@@ -29,7 +29,7 @@
     
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
 
-      <p class="mt-5 mb-3 text-muted">&copy; Atharv Inc.</p>
+      <p class="mt-5 mb-3 text-muted">&copy; </p>
     </form>
   </body>
 </html>
